<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_globe">

    <fragment
        android:id="@+id/nav_globe"
        android:name="com.example.conduitrealworld.ui.globe.GlobeFragment"
        android:label="@string/menu_globe"
        tools:layout="@layout/fragment_globe" >

    </fragment>

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.conduitrealworld.ui.feed.MyfeedFragment"
        android:label="@string/menu_my_feed"
        tools:layout="@layout/fragment_myfeed" />

    <fragment
        android:id="@+id/nav_signup_login"
        android:name="com.example.conduitrealworld.ui.auth.AuthFragment"
        android:label="@string/menu_sign_login"
        tools:layout="@layout/fragment_auth" >


    </fragment>

    <fragment
        android:id="@+id/nav_create_artcile"
        android:name="com.example.conduitrealworld.ui.CreateArticleFragment"
        android:label="Create Article"
        tools:layout="@layout/fragment_create_article"
        >

    </fragment>









</navigation>